CSS fix: scrollbar dont appear with HR-screen and a new style for sliderhandle

--- a/css/custombuttons.css
+++ b/css/custombuttons.css
@@ -69,8 +69,19 @@
 }
 
 .ui-slider .ui-slider-handle{ 
-    background: #a6a6a6;
-    border-width: 1px;
-    border-style: ridge;
-    border-color: black; 
+    background: #4c4c4c; /* Old browsers */
+    background: -moz-radial-gradient(center, ellipse cover, #4c4c4c 0%, #595959 12%, #666666 25%, #474747 39%, #2c2c2c 50%, #000000 51%, #111111 60%, #2b2b2b 76%); /* FF3.6-15 */
+    background: -webkit-radial-gradient(center, ellipse cover, #4c4c4c 0%,#595959 12%,#666666 25%,#474747 39%,#2c2c2c 50%,#000000 51%,#111111 60%,#2b2b2b 76%); /* Chrome10-25,Safari5.1-6 */
+    background: radial-gradient(ellipse at center, #4c4c4c 0%,#595959 12%,#666666 25%,#474747 39%,#2c2c2c 50%,#000000 51%,#111111 60%,#2b2b2b 76%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#2b2b2b',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    border-radius: 200px 200px 200px 200px;
+    -moz-border-radius: 200px 200px 200px 200px;
+    -webkit-border-radius: 200px 200px 200px 200px;
+    border: 2px solid #000000;
+    border-color: white;
+
+}
+
+#footer {
+    height: 10px;
 }
